2012-02-23  Patrick Gansterer  <paroga@webkit.org>

        [CMake] Add WEBKIT_INCLUDE_CONFIG_FILES_IF_EXISTS macro
        https://bugs.webkit.org/show_bug.cgi?id=79371

        Reviewed by Daniel Bates.

        Add a new macro to handle the inclusion of the platform specific *.cmake files.
        In the future this macro should get expanded to also handle feature specifc
        files, like the UseJSC.cmake in WebCore we already have.

        * Source/cmake/WebKitMacros.cmake:

2012-02-23  Patrick Gansterer  <paroga@webkit.org>

        [CMake] Add FindDirectX
        https://bugs.webkit.org/show_bug.cgi?id=79344

        Reviewed by Adam Roben.

        * Source/cmake/FindDirectX.cmake: Added.

2012-02-23  Patrick Gansterer  <paroga@webkit.org>

        [CMake] Add FindQuickTimeSDK
        https://bugs.webkit.org/show_bug.cgi?id=79345

        Reviewed by Adam Roben.

        * Source/cmake/FindQuickTimeSDK.cmake: Added.

2012-02-22  Raphael Kubo da Costa  <kubo@profusion.mobi>

        [CMake] Remove FindGDK.cmake and FindGDK-PixBuf.cmake
        https://bugs.webkit.org/show_bug.cgi?id=79292

        Reviewed by Daniel Bates.

        These files were committed when the EFL port's buildsystem code
        was upstreamed, but are currently not being used anywhere, as the EFL
        port has not depended on GDK for a long time.

        * Source/cmake/FindGDK-PixBuf.cmake: Removed.
        * Source/cmake/FindGDK.cmake: Removed.

2012-02-22  Martin Robinson  <mrobinson@igalia.com>

        [GTK] Clean build is broken when using make -j
        https://bugs.webkit.org/show_bug.cgi?id=76388

        * GNUmakefile.am: Add new global source list variables.

2012-02-20  Ryosuke Niwa  <rniwa@webkit.org>

        perf-o-matic: Extract logic to generate JSON responses as classes to unit test
        https://bugs.webkit.org/show_bug.cgi?id=79018

        Rubber-stamped by Adam Barth.
