@@ -1,3 +1,13 @@
+2012-02-23  Dave Tu  <dtu@chromium.org>
+
+        Add Chromium gpu_tests to the flakiness dashboard
+        https://bugs.webkit.org/show_bug.cgi?id=79300
+
+        Reviewed by Ojan Vafai.
+
+        * Tools/TestResultServer/static-dashboards/builders.js:
+        * Tools/TestResultServer/static-dashboards/dashboard_base.js:
+
 2012-02-23  Patrick Gansterer  <paroga@webkit.org>
 
         [CMake] Add WEBKIT_INCLUDE_CONFIG_FILES_IF_EXISTS macro
